--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/sass/sass.css">
-    <script src="/scripts/script.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="/scripts/main.js"></script>
 </head>
-<body>
+<body id="body">
 
-<h2>test Some</h2>
+<h2>TEST</h2>
 
 
 </body>
